package gestioneRistorante;
import java.util.List;
public class Ristorante {

    private String nome;

}
